# MAI_labs_ML

./: pyproject.toml
lab01-linear-regression/notebooks/: 1_Data_Preprocessing.ipynb  lab1_start.ipynb
lab01-linear-regression/submissions/: ex.csv
lab02-classification/: classification_logreg.ipynb  titanic_solution.ipynb
lab03/: titanic_solution_03.ipynb
lab04/: README.md  lab4.py  solution_bayesian_networks.ipynb  topic_bayesian_networks.ipynb
